Fix overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1588,6 +1588,7 @@ input {
     .nav__list {
         flex-direction: column;
         row-gap: 2rem;
+        
     }
 
     .nav__toggle,
@@ -1597,6 +1598,7 @@ input {
 
     .show-menu {
     right: 0;
+    z-index: 99;
     }
 
     .home__content {
